# rust-essentials

./: .env.example  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/: dependabot.yml
.github/workflows/: publish-docs.yml
src/: builder.rs  context.rs  dotenv.rs  lib.rs  log.rs  main.rs
