[package]
name = "essentials"
version = "0.0.1"
edition = "2021"

[features]
default = ["log", "panic"]
log = []
panic = ["log"]

[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-panic = "0.1"
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }
color-eyre = "0.6"