[package]
name = "essentials"
version = "0.3.1"
edition = "2021"

[features]
default = ["log", "panic", "dotenv"]
log = []
panic = ["log"]
dotenv = []

[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-panic = "0.1"
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }
color-eyre = "0.6"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-env = "0.1.1"
