[package]
name = "essentials"
version = "0.3.7"
edition = "2021"

[features]
default = []
all = ["log", "panic", "dotenv"]
log = []
panic = ["log"]
dotenv = []

[dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-panic = "0.1.2"
eyre = { version = "0.6.12", default-features = false, features = ["auto-install", "track-caller"] }
color-eyre = "0.6.3"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde-env = "0.2.0"
